// Resik
// Author: Dedy Fajar Setyawan
// See: https://github.com/dedyf5/resik

syntax = "proto3";

package transaction;
option go_package = "github.com/dedyf5/resik/app/grpc/handler/transaction";

import "app/grpc/handler/transaction/merchant.proto";
import "app/grpc/handler/transaction/outlet.proto";

service TransactionService {
    rpc MerchantOmzetGet(transaction.MerchantOmzetGetReq) returns (transaction.MerchantOmzetGetRes);
    rpc OutletOmzetGet(transaction.OutletOmzetGetReq) returns (transaction.OutletOmzetGetRes);
}
